--- a/test-output/old/Automation Test Suite/classes.html
+++ b/test-output/old/Automation Test Suite/classes.html
@@ -4,26 +4,42 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testcases.BrokerProcessedTabTest</td>
+<td>testcases.BrokerScheduledPaymentsTabTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyDiscountSortTest</td>
+<td>verifyBrokerScheduledPaymentsTabTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyLoadIDSortTest</td>
+<td>verifyAmountSearchTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAmountPaidToCarrierSortTest</td>
+<td>verifyclickAnticipatedPullDatesortTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyPaySelectionSortTest</td>
+<td>verifyclickLoadIDSortTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyclickAmountSortTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyclickinvoiceSortTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAnticipatedPullDateSearchTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyCompanyNameSearchTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -31,27 +47,23 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchTest</td>
+<td>verifyinvoiceNumSearchTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAmountPulledSortTest</td>
+<td>verifyclickPayToDatesortTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyPulledFromBankDateSortTest</td>
+<td>verifyclickCarrierSortTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyProcessedTabTest</td>
+<td>verifyLoadIDNumSearchTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyCarrierSortTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyPaidToCarrierSortTest</td>
+<td>verifyclickpaymenTypeLinksortTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
