--- a/test-output/old/Automation Test Suite/methods-alphabetical.html
+++ b/test-output/old/Automation Test Suite/methods-alphabetical.html
@@ -1,30 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70d1b1">  <td>18/06/08 15:50:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.loginAsBroker(java.lang.String, java.lang.String)[pri:1, instance:testcases.BrokerProcessedTabTest@396e2f39]">loginAsBroker</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="9273a8">  <td>18/06/08 15:51:53</td>   <td>67934</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerProcessedTabTest@396e2f39]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/08 15:50:33</td>   <td>-12573</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerProcessedTabTest.setUp()[pri:0, instance:testcases.BrokerProcessedTabTest@396e2f39]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/08 15:51:30</td>   <td>44480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyAmountPaidToCarrierSortTest()[pri:8, instance:testcases.BrokerProcessedTabTest@396e2f39]">verifyAmountPaidToCarrierSortTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/08 15:51:23</td>   <td>37257</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyAmountPulledSortTest()[pri:7, instance:testcases.BrokerProcessedTabTest@396e2f39]">verifyAmountPulledSortTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/08 15:51:37</td>   <td>51566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyCarrierSortTest()[pri:9, instance:testcases.BrokerProcessedTabTest@396e2f39]">verifyCarrierSortTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/08 15:51:04</td>   <td>17971</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyDiscountSortTest()[pri:4, instance:testcases.BrokerProcessedTabTest@396e2f39]">verifyDiscountSortTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/08 15:51:44</td>   <td>58148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyLoadIDSortTest()[pri:10, instance:testcases.BrokerProcessedTabTest@396e2f39]">verifyLoadIDSortTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/08 15:51:16</td>   <td>30418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyPaidToCarrierSortTest()[pri:6, instance:testcases.BrokerProcessedTabTest@396e2f39]">verifyPaidToCarrierSortTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/08 15:50:57</td>   <td>11572</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyPaySelectionSortTest()[pri:3, instance:testcases.BrokerProcessedTabTest@396e2f39]">verifyPaySelectionSortTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/08 15:50:51</td>   <td>5892</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyProcessedTabTest()[pri:2, instance:testcases.BrokerProcessedTabTest@396e2f39]">verifyProcessedTabTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/08 15:51:10</td>   <td>24158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyPulledFromBankDateSortTest()[pri:5, instance:testcases.BrokerProcessedTabTest@396e2f39]">verifyPulledFromBankDateSortTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/08 15:51:51</td>   <td>64972</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifySearchTest()[pri:11, instance:testcases.BrokerProcessedTabTest@396e2f39]">verifySearchTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:15:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.loginAsBroker(java.lang.String, java.lang.String)[pri:1, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">loginAsBroker</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="9273a8">  <td>18/06/11 14:16:51</td>   <td>67688</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:15:31</td>   <td>-12550</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerScheduledPaymentsTabTest.setUp()[pri:0, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:16:35</td>   <td>52102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.verifyAmountSearchTest()[pri:11, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">verifyAmountSearchTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:16:39</td>   <td>55958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.verifyAnticipatedPullDateSearchTest()[pri:13, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">verifyAnticipatedPullDateSearchTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:15:46</td>   <td>3216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.verifyBrokerScheduledPaymentsTabTest()[pri:2, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">verifyBrokerScheduledPaymentsTabTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:16:31</td>   <td>48142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.verifyCompanyNameSearchTest()[pri:10, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">verifyCompanyNameSearchTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:16:47</td>   <td>63755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.verifyLoadIDNumSearchTest()[pri:15, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">verifyLoadIDNumSearchTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:16:09</td>   <td>25833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.verifyclickAmountSortTest()[pri:6, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">verifyclickAmountSortTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:15:58</td>   <td>14461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.verifyclickAnticipatedPullDatesortTest()[pri:4, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">verifyclickAnticipatedPullDatesortTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:16:15</td>   <td>31578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.verifyclickCarrierSortTest()[pri:7, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">verifyclickCarrierSortTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:16:26</td>   <td>43113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.verifyclickLoadIDSortTest()[pri:9, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">verifyclickLoadIDSortTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:16:03</td>   <td>20150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.verifyclickPayToDatesortTest()[pri:5, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">verifyclickPayToDatesortTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:16:20</td>   <td>37400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.verifyclickinvoiceSortTest()[pri:8, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">verifyclickinvoiceSortTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:15:48</td>   <td>4566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.verifyclickpaymenTypeLinksortTest()[pri:3, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">verifyclickpaymenTypeLinksortTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/11 14:16:43</td>   <td>59879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerScheduledPaymentsTabTest.verifyinvoiceNumSearchTest()[pri:14, instance:testcases.BrokerScheduledPaymentsTabTest@396e2f39]">verifyinvoiceNumSearchTest</td> 
+  <td>main@194706439</td>   <td></td> </tr>
 </table>
