--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,38 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9a9d7d">  <td>18/06/08 16:42:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.BrokerOutlookTest(java.lang.String, java.lang.String)[pri:5, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">BrokerOutlookTest</td> 
+<tr bgcolor="d8dbba">  <td>18/06/11 14:58:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.loginAsBroker(java.lang.String, java.lang.String)[pri:1, instance:testcases.BrokerProcessedTabTest@75881071]">loginAsBroker</td> 
   <td>main@2074185499</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/08 16:41:50</td>   <td>-11925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.ClickBrokerAvailableCreditTabTest()[pri:2, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">ClickBrokerAvailableCreditTabTest</td> 
-  <td>main@2074185499</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/08 16:41:54</td>   <td>-8490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.RequestAdditionalCreditButtonTest()[pri:3, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">RequestAdditionalCreditButtonTest</td> 
-  <td>main@2074185499</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/08 16:41:56</td>   <td>-6011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.RequestAdditionalCreditPopUpTest()[pri:4, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">RequestAdditionalCreditPopUpTest</td> 
-  <td>main@2074185499</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/08 16:41:45</td>   <td>-17074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerAvailableCreditTabTest.loginBrokerTest(java.lang.String, java.lang.String)[pri:1, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">loginBrokerTest</td> 
-  <td>main@2074185499</td>   <td></td> </tr>
-<tr bgcolor="96b1f3">  <td>18/06/08 16:42:47</td>   <td>45204</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">&lt;&lt;quit</td> 
+<tr bgcolor="7d7d99">  <td>18/06/11 14:59:33</td>   <td>73967</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerProcessedTabTest@75881071]">&lt;&lt;quit</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2074185499</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/08 16:41:33</td>   <td>-28854</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerAvailableCreditTabTest.setUp()[pri:0, instance:testcases.BrokerAvailableCreditTabTest@22eeefeb]">&gt;&gt;setUp</td> 
+<tr bgcolor="d8dbba">  <td>18/06/11 14:58:09</td>   <td>-9394</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerProcessedTabTest.setUp()[pri:0, instance:testcases.BrokerProcessedTabTest@75881071]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:58:57</td>   <td>38690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyAmountPaidToCarrierSortTest()[pri:8, instance:testcases.BrokerProcessedTabTest@75881071]">verifyAmountPaidToCarrierSortTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:58:52</td>   <td>33099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyAmountPulledSortTest()[pri:7, instance:testcases.BrokerProcessedTabTest@75881071]">verifyAmountPulledSortTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:59:21</td>   <td>62650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyAmountSearchTest()[pri:12, instance:testcases.BrokerProcessedTabTest@75881071]">verifyAmountSearchTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:59:03</td>   <td>44272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyCarrierSortTest()[pri:9, instance:testcases.BrokerProcessedTabTest@75881071]">verifyCarrierSortTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:59:14</td>   <td>54874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyCompanySearchTest()[pri:11, instance:testcases.BrokerProcessedTabTest@75881071]">verifyCompanySearchTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:59:25</td>   <td>66400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyDateSearchTest()[pri:12, instance:testcases.BrokerProcessedTabTest@75881071]">verifyDateSearchTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:58:35</td>   <td>16199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyDiscountSortTest()[pri:4, instance:testcases.BrokerProcessedTabTest@75881071]">verifyDiscountSortTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:59:18</td>   <td>58874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyInvoiceSearchTest()[pri:11, instance:testcases.BrokerProcessedTabTest@75881071]">verifyInvoiceSearchTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:59:29</td>   <td>70241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyLoadIDSearchTest()[pri:12, instance:testcases.BrokerProcessedTabTest@75881071]">verifyLoadIDSearchTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:59:09</td>   <td>49808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyLoadIDSortTest()[pri:10, instance:testcases.BrokerProcessedTabTest@75881071]">verifyLoadIDSortTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:58:46</td>   <td>27551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyPaidToCarrierSortTest()[pri:6, instance:testcases.BrokerProcessedTabTest@75881071]">verifyPaidToCarrierSortTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:58:29</td>   <td>10221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyPaySelectionSortTest()[pri:3, instance:testcases.BrokerProcessedTabTest@75881071]">verifyPaySelectionSortTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:58:23</td>   <td>4726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyProcessedTabTest()[pri:2, instance:testcases.BrokerProcessedTabTest@75881071]">verifyProcessedTabTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/06/11 14:58:41</td>   <td>21788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyPulledFromBankDateSortTest()[pri:5, instance:testcases.BrokerProcessedTabTest@75881071]">verifyPulledFromBankDateSortTest</td> 
+  <td>main@2074185499</td>   <td></td> </tr>
 </table>
