--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\shanteshh\AppData\Local\Temp\testng-eclipse-2037938421\testng-customsuite.xml</span>
+                    <span>C:\Users\anilkumarb\AppData\Local\Temp\testng-eclipse-930464092\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -304,7 +304,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\shanteshh\AppData\Local\Temp\testng-eclipse-2037938421\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\anilkumarb\AppData\Local\Temp\testng-eclipse-930464092\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -355,65 +355,65 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(15);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyPaySelectionSortTest')
+data.setCell(0, 1, 'verifyDiscountSortTest')
 data.setCell(0, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(0, 3, 5976);
+data.setCell(0, 3, 10419);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyPulledFromBankDateSortTest')
+data.setCell(1, 1, 'loginAsBroker')
 data.setCell(1, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(1, 3, 5762);
+data.setCell(1, 3, 10405);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyAmountPulledSortTest')
+data.setCell(2, 1, 'verifyPaySelectionSortTest')
 data.setCell(2, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(2, 3, 5590);
+data.setCell(2, 3, 9977);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyDiscountSortTest')
+data.setCell(3, 1, 'verifyPulledFromBankDateSortTest')
 data.setCell(3, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(3, 3, 5587);
+data.setCell(3, 3, 9400);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verifyAmountPaidToCarrierSortTest')
+data.setCell(4, 1, 'verifyPaidToCarrierSortTest')
 data.setCell(4, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(4, 3, 5581);
+data.setCell(4, 3, 9008);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'verifyPaidToCarrierSortTest')
+data.setCell(5, 1, 'verifyAmountPaidToCarrierSortTest')
 data.setCell(5, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(5, 3, 5547);
+data.setCell(5, 3, 8250);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'verifyCarrierSortTest')
 data.setCell(6, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(6, 3, 5535);
+data.setCell(6, 3, 8006);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'verifyProcessedTabTest')
+data.setCell(7, 1, 'verifyAmountPulledSortTest')
 data.setCell(7, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(7, 3, 5494);
+data.setCell(7, 3, 7970);
 data.setCell(8, 0, 8)
-data.setCell(8, 1, 'verifyLoadIDSortTest')
+data.setCell(8, 1, 'verifyProcessedTabTest')
 data.setCell(8, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(8, 3, 5065);
+data.setCell(8, 3, 6955);
 data.setCell(9, 0, 9)
-data.setCell(9, 1, 'loginAsBroker')
+data.setCell(9, 1, 'verifyLoadIDSortTest')
 data.setCell(9, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(9, 3, 4718);
+data.setCell(9, 3, 6746);
 data.setCell(10, 0, 10)
 data.setCell(10, 1, 'verifyCompanySearchTest')
 data.setCell(10, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(10, 3, 3999);
+data.setCell(10, 3, 5369);
 data.setCell(11, 0, 11)
-data.setCell(11, 1, 'verifyDateSearchTest')
+data.setCell(11, 1, 'verifyInvoiceSearchTest')
 data.setCell(11, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(11, 3, 3840);
+data.setCell(11, 3, 3958);
 data.setCell(12, 0, 12)
-data.setCell(12, 1, 'verifyInvoiceSearchTest')
+data.setCell(12, 1, 'verifyDateSearchTest')
 data.setCell(12, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(12, 3, 3775);
+data.setCell(12, 3, 3888);
 data.setCell(13, 0, 13)
 data.setCell(13, 1, 'verifyAmountSearchTest')
 data.setCell(13, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(13, 3, 3749);
+data.setCell(13, 3, 3846);
 data.setCell(14, 0, 14)
 data.setCell(14, 1, 'verifyLoadIDSearchTest')
 data.setCell(14, 2, 'testcases.BrokerProcessedTabTest')
-data.setCell(14, 3, 3725);
+data.setCell(14, 3, 3840);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -451,67 +451,67 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">loginAsBroker(cadregbroker@mailinator.truckstop.com, Password@123)</span>
-                <span class="method-start">9399 ms</span>
+                <span class="method-start">12402 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyProcessedTabTest</span>
-                <span class="method-start">14125 ms</span>
+                <span class="method-start">22815 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyPaySelectionSortTest</span>
-                <span class="method-start">19620 ms</span>
+                <span class="method-start">29770 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyDiscountSortTest</span>
-                <span class="method-start">25598 ms</span>
+                <span class="method-start">39747 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyPulledFromBankDateSortTest</span>
-                <span class="method-start">31187 ms</span>
+                <span class="method-start">50166 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyPaidToCarrierSortTest</span>
-                <span class="method-start">36950 ms</span>
+                <span class="method-start">59566 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyAmountPulledSortTest</span>
-                <span class="method-start">42498 ms</span>
+                <span class="method-start">68575 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyAmountPaidToCarrierSortTest</span>
-                <span class="method-start">48089 ms</span>
+                <span class="method-start">76546 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyCarrierSortTest</span>
-                <span class="method-start">53671 ms</span>
+                <span class="method-start">84796 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoadIDSortTest</span>
-                <span class="method-start">59207 ms</span>
+                <span class="method-start">92802 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyCompanySearchTest</span>
-                <span class="method-start">64273 ms</span>
+                <span class="method-start">99548 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyInvoiceSearchTest</span>
-                <span class="method-start">68273 ms</span>
+                <span class="method-start">104917 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyAmountSearchTest</span>
-                <span class="method-start">72049 ms</span>
+                <span class="method-start">108875 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyDateSearchTest</span>
-                <span class="method-start">75799 ms</span>
+                <span class="method-start">112722 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoadIDSearchTest</span>
-                <span class="method-start">79640 ms</span>
+                <span class="method-start">116610 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">quit</span>
-                <span class="method-start">83366 ms</span>
+                <span class="method-start">120452 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
